Updates on nodes

--- a/nutria_fmv_maker/lib/i10n/app_el.arb
+++ b/nutria_fmv_maker/lib/i10n/app_el.arb
@@ -3,5 +3,6 @@
   "menuBarEdit": "Επεξεργασία",
   "menuBarFile": "Αρχείο",
   "menuBarHelp": "Βοήθεια",
-  "menuBarView": "Προβολή"
+  "menuBarView": "Προβολή",
+  "videoNodeChoice": "Επιλογή"
 }
