--- a/nutria_fmv_maker/lib/i10n/app_fr.arb
+++ b/nutria_fmv_maker/lib/i10n/app_fr.arb
@@ -3,5 +3,6 @@
   "menuBarEdit": "Edition",
   "menuBarFile": "Fichier",
   "menuBarHelp": "Aide",
-  "menuBarView": "Afficage"
+  "menuBarView": "Afficage",
+  "videoNodeChoice": "Choix"
 }
