--- a/nutria_fmv_maker/lib/i10n/app_en.arb
+++ b/nutria_fmv_maker/lib/i10n/app_en.arb
@@ -1,10 +1,28 @@
 {
-  "a": "a",
+  "editPreferences": "Preferences",
+  "editProjectSettings": "Project Settings",
+  "editRedo": "Redo",
+  "editUndo": "Undo",
+  "fileExit": "Exit",
+  "fileLoadProject": "Load Project",
+  "fileNewProject": "New Project",
+  "fileRecentProjects": "Recent Projects",
+  "fileSaveProject": "Save Project",
+  "fileSaveProjectAs": "Save Project as",
   "helloWorld": "Hello World!",
+  "helpAbout": "About Nutria FMV Maker",
+  "helpDocumentation": "Documentation",
+  "helpGithub": "Github",
   "menuBarEdit": "Edit",
   "menuBarFile": "File",
   "menuBarHelp": "Help",
   "menuBarView": "View",
   "videoNodeChoice": "Option",
+  "viewCustomTheme": "Custom Theme",
+  "viewDarkTheme": "Dark Theme",
+  "viewLanguage": "Language",
+  "viewLightTheme": "Light Theme",
+  "viewProperties": "Properties Section",
+  "viewVideoPlayer": "Video Player Section",
   "z": "z"
 }
