--- a/nutria_fmv_maker/lib/i10n/app_fr.arb
+++ b/nutria_fmv_maker/lib/i10n/app_fr.arb
@@ -1,8 +1,27 @@
 {
+  "editPreferences": "Préférences",
+  "editProjectSettings": "Paramètres du projet",
+  "editRedo": "Rétablir",
+  "editUndo": "Annuler",
+  "fileExit": "Quitter",
+  "fileLoadProject": "Charger un projet",
+  "fileNewProject": "Nouveau projet",
+  "fileRecentProjects": "Projets récents",
+  "fileSaveProject": "Enregistrer le projet",
+  "fileSaveProjectAs": "Enregistrer le projet sous...",
   "helloWorld": "Salut Monde!",
-  "menuBarEdit": "Edition",
+  "helpAbout": "À propos de Nutria FMV Maker",
+  "helpDocumentation": "Documentation",
+  "helpGithub": "Github",
+  "menuBarEdit": "Edit",
   "menuBarFile": "Fichier",
   "menuBarHelp": "Aide",
   "menuBarView": "Afficage",
-  "videoNodeChoice": "Choix"
+  "videoNodeChoice": "Choix",
+  "viewCustomTheme": "Thème personnalisé",
+  "viewDarkTheme": "Thème sombre",
+  "viewLanguage": "Langue",
+  "viewLightTheme": "Thème clair",
+  "viewProperties": "Section Propriétés ",
+  "viewVideoPlayer": "Section Lecteur Vidéo"
 }
