--- a/nutria_fmv_maker/lib/i10n/app_el.arb
+++ b/nutria_fmv_maker/lib/i10n/app_el.arb
@@ -23,5 +23,6 @@
   "viewLanguage": "Γλώσσα",
   "viewLightTheme": "Ανοιχτό Θέμα",
   "viewProperties": "Στήλη Προτιμήσεων",
+  "viewTheme": "Θέμα",
   "viewVideoPlayer": "Στήλη Βίντεο"
 }
