--- a/nutria_fmv_maker/lib/i10n/app_en.arb
+++ b/nutria_fmv_maker/lib/i10n/app_en.arb
@@ -23,6 +23,7 @@
   "viewLanguage": "Language",
   "viewLightTheme": "Light Theme",
   "viewProperties": "Properties Section",
+  "viewTheme": "Theme",
   "viewVideoPlayer": "Video Player Section",
   "z": "z"
 }
