--- a/nutria_fmv_maker/lib/i10n/app_fr.arb
+++ b/nutria_fmv_maker/lib/i10n/app_fr.arb
@@ -23,5 +23,6 @@
   "viewLanguage": "Langue",
   "viewLightTheme": "Thème clair",
   "viewProperties": "Section Propriétés ",
+  "viewTheme": "Thème",
   "viewVideoPlayer": "Section Lecteur Vidéo"
 }
