victories and losses

--- a/nutria_fmv_maker/lib/i10n/app_el.arb
+++ b/nutria_fmv_maker/lib/i10n/app_el.arb
@@ -1,4 +1,9 @@
 {
+  "contextBranchingVideoNode": "Βιντεο Πολλαπλών Επιλογών",
+  "contextCompareNode": "Σύγκριση Τιμής",
+  "contextMathNode": "Μαθηματικά",
+  "contextSetNode": "Ορισμός Τιμής",
+  "contextSimpleVideoNode": "Απλό Βίντεο",
   "editPreferences": "Προτιμήσεις",
   "editProjectSettings": "Ρυθμίσεις Πρότζεκτ",
   "editRedo": "Επανάληψη",
