--- a/nutria_fmv_maker/lib/i10n/app_en.arb
+++ b/nutria_fmv_maker/lib/i10n/app_en.arb
@@ -1,4 +1,9 @@
 {
+  "contextBranchingVideoNode": "Branching Video",
+  "contextCompareNode": "Compare Value",
+  "contextMathNode": "Math",
+  "contextSetNode": "Set Value",
+  "contextSimpleVideoNode": "Simple Video",
   "editPreferences": "Preferences",
   "editProjectSettings": "Project Settings",
   "editRedo": "Redo",
