--- a/nutria_fmv_maker/lib/i10n/app_en.arb
+++ b/nutria_fmv_maker/lib/i10n/app_en.arb
@@ -10,6 +10,7 @@
   "editUndo": "Undo",
   "fileExit": "Exit",
   "fileLoadProject": "Load Project",
+  "filename": "File Name",
   "fileNewProject": "New Project",
   "fileRecentProjects": "Recent Projects",
   "fileSaveProject": "Save Project",
@@ -22,6 +23,27 @@
   "menuBarFile": "File",
   "menuBarHelp": "Help",
   "menuBarView": "View",
+  "videoMetadataAspectRatio": "Aspect Ratio",
+  "videoMetadataAudioBitDepth": "Audio Bit Depth",
+  "videoMetadataAudioChannels": "Audio Channels",
+  "videoMetadataAudioCodecFormat": "Audio Codec Format",
+  "videoMetadataAudioSampleRate": "Audio Sample Rate",
+  "videoMetadataBitrate": "Bitrate",
+  "videoMetadataCodecFormat": "Codec Format",
+  "videoMetadataColorProfile": "Color Profile",
+  "videoMetadataDateCreated": "Date Created",
+  "videoMetadataDuration": "Duration",
+  "videoMetadataFilename": "Filename",
+  "videoMetadataFilePath": "File Path",
+  "videoMetadataFileSize": "File Size",
+  "videoMetadataFrameRate": "Frame Rate",
+  "videoMetadataNamesBytes": "Bytes",
+  "videoMetadataNamesFps": "fps",
+  "videoMetadataNamesGigabytes": "GB",
+  "videoMetadataNamesKilobytes": "KB",
+  "videoMetadataNamesMegabytes": "MB",
+  "videoMetadataResolution": "Resolution",
+  "videoMetadataTimecode": "Timecode",
   "videoNodeChoice": "Option",
   "viewCustomTheme": "Custom Theme",
   "viewDarkTheme": "Dark Theme",
