--- a/nutria_fmv_maker/lib/i10n/app_el.arb
+++ b/nutria_fmv_maker/lib/i10n/app_el.arb
@@ -1,4 +1,8 @@
 {
+  "boardImportedVideos": "Εισαγόμενα βίντεο",
+  "boardPreferences": "Προτιμήσεις",
+  "boardProjectSettings": "Ρυθμίσεις Πρότζεκτ",
+  "boardVariables": "Μεταβλητές",
   "contextBranchingVideoNode": "Βιντεο Πολλαπλών Επιλογών",
   "contextCompareNode": "Σύγκριση Τιμής",
   "contextMathNode": "Μαθηματικά",
@@ -7,6 +11,7 @@
   "editPreferences": "Προτιμήσεις",
   "editProjectSettings": "Ρυθμίσεις Πρότζεκτ",
   "editRedo": "Επανάληψη",
+  "editToggleGridSnapping": "Ενεργοποίηση/Απενεργοποίηση Πλέγματος",
   "editUndo": "Αναίρεση",
   "fileExit": "Έξοδος",
   "fileLoadProject": "Άνοιγμα ",
@@ -19,11 +24,40 @@
   "helpAbout": "Σχετικά με το Nutria FMV Maker",
   "helpDocumentation": "Documentation",
   "helpGithub": "Github",
+  "infoFFmpeg": "Περιλαμβάνεται το FFmpeg με την άδεια GPLv3.",
+  "infoProjectDescription": "To «Nutria FMV Maker» είναι ένα υπό διαμόρφωση ελεύθερο λογισμικό ανοικτού κώδικα γραμμένο σε Flutter, που στοχεύει να κάνει τη διαδικασία κατασκευής διαδραστικών ταινιών πιο προσιτή. Δημοσιεύεται υπό την άδεια GPLv3",
   "menuBarEdit": "Επεξεργασία",
   "menuBarFile": "Αρχείο",
   "menuBarHelp": "Βοήθεια",
   "menuBarView": "Προβολή",
+  "nodeConvertToBranching": "Μετατροπή σε Διακλαδικό Κόμβο",
+  "nodeConvertToSimple": "Μετατροπή σε Απλό Κόμβο Βίντεο",
+  "overrideDefaultSelection": "Αυτόματη Επιλογή",
+  "overridePauseOnEnd": "Παύση στο Τέλος",
+  "overrideSelectionTime": "Χρόνος Επιλογής",
+  "overrideShowTimer": "Εμφάνιση Χρόνου Επιλογής",
+  "overrideVideoFit": "Προσαρμογή Βίντεο",
+  "videoMetadataAspectRatio": "Αναλογία Διαστάσεων",
+  "videoMetadataAudioBitDepth": "Bit Depth Ήχου",
+  "videoMetadataAudioChannels": "Κανάλια Ήχου",
+  "videoMetadataAudioCodecFormat": "Φορμάτ Κωδικοποίησης ΄Ήχου",
+  "videoMetadataAudioSampleRate": "Sample Rate Ήχου",
+  "videoMetadataBitrate": "Bitrate",
+  "videoMetadataCodecFormat": "Φορμάτ Κωδικοποίησης",
+  "videoMetadataColorProfile": "Χρωματικό Προφίλ",
   "videoMetadataDateCreated": "Ημερομηνία Τροποποίησης",
+  "videoMetadataDuration": "Διάρκεια",
+  "videoMetadataFilename": "Όνομα Αρχείου",
+  "videoMetadataFilePath": "Θέση Αρχείου",
+  "videoMetadataFileSize": "Μέγεθος Αρχείου",
+  "videoMetadataFrameRate": "Ρυθμός Καρέ",
+  "videoMetadataNamesBytes": "Bytes",
+  "videoMetadataNamesFps": "καρέ/δευτερόλεπτο",
+  "videoMetadataNamesGigabytes": "GB",
+  "videoMetadataNamesKilobytes": "KB",
+  "videoMetadataNamesMegabytes": "MB",
+  "videoMetadataResolution": "Ανάλυση",
+  "videoMetadataTimecode": "Μορφή Timecode",
   "videoNodeChoice": "Επιλογή",
   "viewCustomTheme": "Προσαρμοσμένο Θέμα",
   "viewDarkTheme": "Σκούρο Θέμα",
