--- a/nutria_fmv_maker/lib/i10n/app_en.arb
+++ b/nutria_fmv_maker/lib/i10n/app_en.arb
@@ -1,4 +1,8 @@
 {
+  "boardImportedVideos": "Imported Videos",
+  "boardPreferences": "Preferences",
+  "boardProjectSettings": "Project Settings",
+  "boardVariables": "Variables",
   "contextBranchingVideoNode": "Branching Video",
   "contextCompareNode": "Compare Value",
   "contextMathNode": "Math",
@@ -7,6 +11,7 @@
   "editPreferences": "Preferences",
   "editProjectSettings": "Project Settings",
   "editRedo": "Redo",
+  "editToggleGridSnapping": "Toggle Grid Snapping",
   "editUndo": "Undo",
   "fileExit": "Exit",
   "fileLoadProject": "Load Project",
@@ -19,10 +24,19 @@
   "helpAbout": "About Nutria FMV Maker",
   "helpDocumentation": "Documentation",
   "helpGithub": "Github",
+  "infoFFmpeg": "FFmpeg is bundled under the GPLv3 license.",
+  "infoProjectDescription": "«Nutria FMV Maker» is an in-the-making free/open-source Flutter project aiming to make the process of creating interactive movie experiences more accessible, published under the GPLv3 license.",
   "menuBarEdit": "Edit",
   "menuBarFile": "File",
   "menuBarHelp": "Help",
   "menuBarView": "View",
+  "nodeConvertToBranching": "Convert to Branching Node",
+  "nodeConvertToSimple": "Convert to Simple Video Node",
+  "overrideDefaultSelection": "Default Selection",
+  "overridePauseOnEnd": "Pause on End",
+  "overrideSelectionTime": "Selection Time",
+  "overrideShowTimer": "Show Timer",
+  "overrideVideoFit": "Video Fit",
   "videoMetadataAspectRatio": "Aspect Ratio",
   "videoMetadataAudioBitDepth": "Audio Bit Depth",
   "videoMetadataAudioChannels": "Audio Channels",
