--- a/nutria_fmv_maker/lib/i10n/app_fr.arb
+++ b/nutria_fmv_maker/lib/i10n/app_fr.arb
@@ -1,29 +1,63 @@
 {
+  "boardImportedVideos": "Vidéos Importées",
+  "boardPreferences": "Préférences",
+  "boardProjectSettings": "Paramètres du Projet",
+  "boardVariables": "Variables",
   "contextBranchingVideoNode": "Vidéo Ramifié",
   "contextCompareNode": "Comparaison de Valeur",
   "contextMathNode": "Mathématique",
   "contextSetNode": "Définition de Valeur",
   "contextSimpleVideoNode": "Vidéo Simple",
   "editPreferences": "Préférences",
-  "editProjectSettings": "Paramètres du projet",
+  "editProjectSettings": "Paramètres du Projet",
   "editRedo": "Rétablir",
+  "editToggleGridSnapping": "Activer/Désactiver l'Alignement sur la Grille",
   "editUndo": "Annuler",
   "fileExit": "Quitter",
-  "fileLoadProject": "Charger un projet",
-  "filename": "Nom du fichier",
-  "fileNewProject": "Nouveau projet",
-  "fileRecentProjects": "Projets récents",
-  "fileSaveProject": "Enregistrer le projet",
-  "fileSaveProjectAs": "Enregistrer le projet sous...",
+  "fileLoadProject": "Charger un Projet",
+  "filename": "Nom du Fichier",
+  "fileNewProject": "Nouveau Projet",
+  "fileRecentProjects": "Projets Récents",
+  "fileSaveProject": "Enregistrer le Projet",
+  "fileSaveProjectAs": "Enregistrer le Projet sous...",
   "helloWorld": "Salut Monde!",
   "helpAbout": "À propos de Nutria FMV Maker",
   "helpDocumentation": "Documentation",
   "helpGithub": "Github",
-  "menuBarEdit": "Edit",
+  "infoFFmpeg": "Contient la bibliothèque FFmpeg sous licence GPLv3.",
+  "infoProjectDescription": "«Nutria FMV Maker» est un projet Flutter gratuit/open-source en cours de réalisation qui vise à rendre plus accessible le processus de création d'expériences cinématographiques interactives. Il est publié sous licence GPLv3.",
+  "menuBarEdit": "Édition",
   "menuBarFile": "Fichier",
   "menuBarHelp": "Aide",
   "menuBarView": "Afficage",
+  "nodeConvertToBranching": "Convertir en Νœud Ramifié",
+  "nodeConvertToSimple": "Convertir en Νœud Vidéo Simple",
+  "overrideDefaultSelection": "Choix par Défaut",
+  "overridePauseOnEnd": "Pause à la Fin",
+  "overrideSelectionTime": "Temps de sélection",
+  "overrideShowTimer": "Afficher la Minuterie",
+  "overrideVideoFit": "Ajustement Vidéo",
+  "videoMetadataAspectRatio": "Rapport de Forme",
+  "videoMetadataAudioBitDepth": "Bit Depth Audio",
+  "videoMetadataAudioChannels": "Canaux audio",
+  "videoMetadataAudioCodecFormat": "Format du codec audio",
+  "videoMetadataAudioSampleRate": "Taux d'Έchantillonnage Αudio",
+  "videoMetadataBitrate": "Bitrate",
+  "videoMetadataCodecFormat": "Format du codec",
+  "videoMetadataColorProfile": "Profil de couleur",
   "videoMetadataDateCreated": "Date de creation",
+  "videoMetadataDuration": "Durée",
+  "videoMetadataFilename": "Nom de fichier",
+  "videoMetadataFilePath": "Chemin d'accès",
+  "videoMetadataFileSize": "Taille du fichier",
+  "videoMetadataFrameRate": "Images par seconde",
+  "videoMetadataNamesBytes": "Octets",
+  "videoMetadataNamesFps": "IPS ",
+  "videoMetadataNamesGigabytes": "Go",
+  "videoMetadataNamesKilobytes": "Ko",
+  "videoMetadataNamesMegabytes": "Mo",
+  "videoMetadataResolution": "Résolution",
+  "videoMetadataTimecode": "Timecode",
   "videoNodeChoice": "Choix",
   "viewCustomTheme": "Thème personnalisé",
   "viewDarkTheme": "Thème sombre",
