Localization for project title/description

--- a/nutria_fmv_maker/lib/i10n/app_el.arb
+++ b/nutria_fmv_maker/lib/i10n/app_el.arb
@@ -8,6 +8,7 @@
   "contextMathNode": "Μαθηματικά",
   "contextSetNode": "Ορισμός Τιμής",
   "contextSimpleVideoNode": "Απλό Βίντεο",
+  "editDeleteSelectedNodes": "Διαγραφή Επελεγμένων Κόμβων",
   "editPreferences": "Προτιμήσεις",
   "editProjectSettings": "Ρυθμίσεις Πρότζεκτ",
   "editRedo": "Επανάληψη",
@@ -32,6 +33,9 @@
   "menuBarView": "Προβολή",
   "nodeConvertToBranching": "Μετατροπή σε Διακλαδικό Κόμβο",
   "nodeConvertToSimple": "Μετατροπή σε Απλό Κόμβο Βίντεο",
+  "originProjectDescription": "Περιγραφή Πρότζεκτ",
+  "originProjectTitle": "Τίτλος Πρότζεκτ",
+  "originTitlePlaceHolder": "Παράδειγμα Κεντρικού Μενού",
   "overrideDefaultSelection": "Αυτόματη Επιλογή",
   "overridePauseOnEnd": "Παύση στο Τέλος",
   "overrideSelectionTime": "Χρόνος Επιλογής",
