--- a/nutria_fmv_maker/lib/i10n/app_en.arb
+++ b/nutria_fmv_maker/lib/i10n/app_en.arb
@@ -8,6 +8,7 @@
   "contextMathNode": "Math",
   "contextSetNode": "Set Value",
   "contextSimpleVideoNode": "Simple Video",
+  "editDeleteSelectedNodes": "Delete Selected Node(s)",
   "editPreferences": "Preferences",
   "editProjectSettings": "Project Settings",
   "editRedo": "Redo",
@@ -32,6 +33,9 @@
   "menuBarView": "View",
   "nodeConvertToBranching": "Convert to Branching Node",
   "nodeConvertToSimple": "Convert to Simple Video Node",
+  "originProjectDescription": "Project Description",
+  "originProjectTitle": "Project Title",
+  "originTitlePlaceHolder": "Main Menu Placeholder",
   "overrideDefaultSelection": "Default Selection",
   "overridePauseOnEnd": "Pause on End",
   "overrideSelectionTime": "Selection Time",
