--- a/nutria_fmv_maker/lib/i10n/app_fr.arb
+++ b/nutria_fmv_maker/lib/i10n/app_fr.arb
@@ -8,6 +8,7 @@
   "contextMathNode": "Mathématique",
   "contextSetNode": "Définition de Valeur",
   "contextSimpleVideoNode": "Vidéo Simple",
+  "editDeleteSelectedNodes": "Supprimer les Nœuds Sélectionnés",
   "editPreferences": "Préférences",
   "editProjectSettings": "Paramètres du Projet",
   "editRedo": "Rétablir",
@@ -32,6 +33,9 @@
   "menuBarView": "Afficage",
   "nodeConvertToBranching": "Convertir en Νœud Ramifié",
   "nodeConvertToSimple": "Convertir en Νœud Vidéo Simple",
+  "originProjectDescription": "Description du projet",
+  "originProjectTitle": "Titre du projet",
+  "originTitlePlaceHolder": "Exemple de menu principal",
   "overrideDefaultSelection": "Choix par Défaut",
   "overridePauseOnEnd": "Pause à la Fin",
   "overrideSelectionTime": "Temps de sélection",
